--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Магазин флорариумов</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -17,15 +18,43 @@
                 </div>
                 <div class="logo__desc">
                     <div class="logo__title"> Flourist master </div>
-                    <div class="logo"> </div>
-
-
-
+                    <div class="logo__subtitle"> Магазин флорариумов</div>
                 </div>
-
             </div>
+            <nav class="nav">
+                <ul class="nav__list" :>
+                    <li class="nav__item">
+                        <a href="#!" class="nav__link"> Главная</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#!" class="nav__link">Каталог</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#!" class="nav__link">Контакты</a>
+                    </li>
+                </ul>
+            </nav>
+            <address class="contact">
+                <a href="tel:+7654321000" class="contact__tel">+7 654 321 000</a>
+            </address>
+            <div class="cart">
+                <a href="#!" class="cart__img-wrap">
+                    <img src="img/icons/shopping_cart.png" alt="Корзина" class="cart __img">
+                </a>
+                <div class="cart__price">
+                    <span class="cart__price-value">45,00 </span>
+                    <span class="cart__price-currency">$</span>
+                </div>
+                <button class="cart__btn">
+                    <img src="img/icons/cart__btn.svg" alt="Кнопка" class="cart__btn-img">
+                </button>
+            </div>
+    </div>
+    <header>
 
-        </header>
+    </header>
+
+
     </div>
 </body>
 
