--- a/index.html
+++ b/index.html
@@ -43,18 +43,13 @@
                 </a>
                 <div class="cart__price">
                     <span class="cart__price-value">45,00 </span>
-                    <span class="cart__price-currency">$</span>
+                    <span class="cart__price-value">$</span>
                 </div>
                 <button class="cart__btn">
                     <img src="img/icons/cart__btn.svg" alt="Кнопка" class="cart__btn-img">
                 </button>
             </div>
-    </div>
-    <header>
-
-    </header>
-
-
+        </header>
     </div>
 </body>
 
