--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Магазин флорариумов</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="wrapper">
         <header class=" header">
-            <div class="logo">
+            <div class="container header__container">
                 <div class="logo__img-wrap">
                     <img src="img/logo.png" alt="Логотип" class="logo__img">
                 </div>
@@ -20,36 +23,50 @@
                     <div class="logo__title"> Flourist master </div>
                     <div class="logo__subtitle"> Магазин флорариумов</div>
                 </div>
-            </div>
-            <nav class="nav">
-                <ul class="nav__list" :>
-                    <li class="nav__item">
-                        <a href="#!" class="nav__link"> Главная</a>
-                    </li>
-                    <li class="nav__item">
-                        <a href="#!" class="nav__link">Каталог</a>
-                    </li>
-                    <li class="nav__item">
-                        <a href="#!" class="nav__link">Контакты</a>
-                    </li>
-                </ul>
-            </nav>
-            <address class="contact">
-                <a href="tel:+7654321000" class="contact__tel">+7 654 321 000</a>
-            </address>
-            <div class="cart">
-                <a href="#!" class="cart__img-wrap">
-                    <img src="img/icons/shopping_cart.png" alt="Корзина" class="cart __img">
-                </a>
-                <div class="cart__price">
-                    <span class="cart__price-value">45,00 </span>
-                    <span class="cart__price-value">$</span>
+                <nav class="nav">
+                    <ul class="nav__list" :>
+                        <li class="nav__item">
+                            <a href="#!" class="nav__link"> Главная</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#!" class="nav__link">Каталог</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#!" class="nav__link">Контакты</a>
+                        </li>
+                    </ul>
+                </nav>
+                <address class="contact">
+                    <a href="tel:+7654321000" class="contact__tel">+7 654 321 000</a>
+                </address>
+                <div class="cart">
+                    <a href="#!" class="cart__img-wrap">
+                        <img src="img/icons/shopping_cart.png" alt="Корзина" class="cart__img">
+                    </a>
+                    <div class="cart__price">
+                        <span class="cart__price-value">45,00 </span>
+                        <span class="cart__price-value">$</span>
+                    </div>
+                    <button class="cart__btn">
+                        <img src="img/icons/cart__btn.svg" alt="Кнопка" class="cart__btn-img">
+                    </button>
+
                 </div>
-                <button class="cart__btn">
-                    <img src="img/icons/cart__btn.svg" alt="Кнопка" class="cart__btn-img">
-                </button>
             </div>
         </header>
+        <section class="hero">
+            <div class="hero__desk">
+                <div class="container">
+                    <div class="hero__container">
+                        <h1 class="title">
+
+
+                        </h1>
+                    </div>
+
+
+
+        </section>
     </div>
 </body>
 
