--- a/index.html
+++ b/index.html
@@ -57,15 +57,30 @@
         <section class="hero">
             <div class="hero__desk">
                 <div class="container">
-                    <div class="hero__container">
+                    <div class="hero__content">
                         <h1 class="title">
-
-
+                            Флорариумы <br>
+                            любой формы и размера
                         </h1>
+                        <p class="hero__subtitle">
+                            Самая впечатляющая глава в истории ботаники
+                            у вас прямо на столе
+                        </p>
+                        <a href="#" class="btn hero__link" href="#">Смотреть каталог</a>
+
                     </div>
+                </div>
+            </div>
+            <div class="hero__slider">
+                <ul class="dots">
+                    <li class="dot"></li>
+                    <li class="dot active"></li>
+                    <li class="dot"></li>
+                    <li class="dot"></li>
+                </ul>
+                <img src="img/hero_img.jpg" alt="Флорариум" class="hero__slide">
 
-
-
+            </div>
         </section>
     </div>
 </body>
