--- a/index.html
+++ b/index.html
@@ -119,31 +119,73 @@
                         </li>
                     </ul>
                     <div class="product__slider">
-                        <div class="product__slider-ctrls">Назад</div>
-                        <div class="product__slider-ctrl product__slider-ctrl-prev">Вперед</div>
+                        <div class="product__slider-ctrls">
+                            <button class="product__slider-ctrl product__slider-ctrl--prev">Назад</button>
+                            <button class="product__slider-ctrl product__slider-ctrl--next">Вперед</button>
+                        </div>
+                        <ul class="product__list">
+                            <li class="product__item card">
+                                <div class="card__item-wrap">
+                                    <img src="img/finished_work/oazis.png" alt="флорариум оазис" class="product__img">
+                                </div>
+                                <div class="card__decs">
+                                    <h3 class="card__name">Oазис</h3>
+                                    <p class="card__info">
+                                        Набор включает в себя: 3 разновидности суккулентов, тайскую архидею, грунт,
+                                        стеклянный
+                                        флорариум и элементы декора.
+                                    </p>
+                                    <div class="card__buy">
+                                        <div class="card__price">35$</div>
+                                        <button class="card__buy-btn btn">В корзину</button>
+
+                                    </div>
+                                </div>
+
+                            </li>
+                            <li class="product__item card">
+                                <div class="card__item-wrap">
+                                    <img src="img/finished_work/oazis.png" alt="флорариум оазис" class="product__img">
+                                </div>
+                                <div class="card__decs">
+                                    <h3 class="card__name">Oазис</h3>
+                                    <p class="card__info">
+                                        Набор включает в себя: 3 разновидности суккулентов, тайскую архидею, грунт,
+                                        стеклянный
+                                        флорариум и элементы декора.
+                                    </p>
+                                    <div class="card__buy">
+                                        <div class="card__price">35$</div>
+                                        <button class="card__buy-btn btn">В корзину</button>
+
+                                    </div>
+                                </div>
+
+                            </li>
+                            <li class="product__item card">
+                                <div class="card__item-wrap">
+                                    <img src="img/finished_work/oazis.png" alt="флорариум оазис" class="product__img">
+                                </div>
+                                <div class="card__decs">
+                                    <h3 class="card__name">Oазис</h3>
+                                    <p class="card__info">
+                                        Набор включает в себя: 3 разновидности суккулентов, тайскую архидею, грунт,
+                                        стеклянный
+                                        флорариум и элементы декора.
+                                    </p>
+                                    <div class="card__buy">
+                                        <div class="card__price">35$</div>
+                                        <button class="card__buy-btn btn">В корзину</button>
+
+                                    </div>
+                                </div>
+
+                            </li>
+
+
+                        </ul>
                     </div>
-                    <ul class="product__list">
-                        <li class="product__item">
-                            <div class="product__item-wrap">
-                                <img src="img/finished_work/oazis.png" alt="флорариум оазис" class="product__img">
-                            </div>
-                            <div class="product__decs">
-                                <h3 class="product__name">Oазис</h3>
-                                <p class="product__info">
-                                    Набор включает в себя: 3 разновидности суккулентов, тайскую архидею, грунт,
-                                    стеклянный
-                                    флорариум и элементы декора.
-                                </p>
-                            </div>
-                            <div class="product__buy">
-                                <div class="product__price">35$</div>
-                                <button class="product__buy-btn btn">В корзину</button>
 
-                            </div>
-                        </li>
-
-
-                    </ul>
                 </div>
 
             </section>
