--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -15,19 +15,21 @@
 
 <body>
     <div class="wrapper">
-        <header class=" header">
+        <header class="header">
             <div class="container header__container">
-                <div class="logo__img-wrap">
-                    <img src="img/logo.png" alt="Логотип" class="logo__img">
+                <div class="logo">
+                    <div class="logo__img-wrap">
+                        <img src="img/logo.png" alt="Логотип" class="logo__img">
+                    </div>
+                    <div class="logo__desc">
+                        <div class="logo__title">Florist master</div>
+                        <div class="logo__subtitle">Магазин флорариумов</div>
+                    </div>
                 </div>
-                <div class="logo__desc">
-                    <div class="logo__title"> Flourist master </div>
-                    <div class="logo__subtitle"> Магазин флорариумов</div>
-                </div>
-                <nav class="nav">
-                    <ul class="nav__list" :>
+                <nav class="nav header__nav">
+                    <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="#!" class="nav__link"> Главная</a>
+                            <a href="#!" class="nav__link">Главная</a>
                         </li>
                         <li class="nav__item">
                             <a href="#!" class="nav__link">Каталог</a>
@@ -38,25 +40,24 @@
                     </ul>
                 </nav>
                 <address class="contact">
-                    <a href="tel:+7654321000" class="contact__tel">+7 654 321 000</a>
+                    <a href="tel:+76543210000" class="contact__tel">+7 654 321 00 00</a>
                 </address>
                 <div class="cart">
                     <a href="#!" class="cart__img-wrap">
                         <img src="img/icons/shopping_cart.png" alt="Корзина" class="cart__img">
                     </a>
                     <div class="cart__price">
-                        <span class="cart__price-value">45,00 </span>
+                        <span class="cart__price-value">45,00</span>
                         <span class="cart__price-value">$</span>
                     </div>
                     <button class="cart__btn">
                         <img src="img/icons/cart__btn.svg" alt="Кнопка" class="cart__btn-img">
                     </button>
-
                 </div>
             </div>
         </header>
         <section class="hero">
-            <div class="hero__desk">
+            <div class="hero__desc">
                 <div class="container">
                     <div class="hero__content">
                         <h1 class="title">
@@ -67,8 +68,7 @@
                             Самая впечатляющая глава в истории ботаники
                             у вас прямо на столе
                         </p>
-                        <a href="#" class="btn hero__link" href="#">Смотреть каталог</a>
-
+                        <a class="btn hero__link" href="#!">Смотреть каталог</a>
                     </div>
                 </div>
             </div>
@@ -80,118 +80,180 @@
                     <li class="dot"></li>
                 </ul>
                 <img src="img/hero_img.jpg" alt="Флорариум" class="hero__slide">
-
             </div>
         </section>
-        <section>
-            <section class="product">
-                <div class="container">
-                    <h2 class="title"> Готовые работы</h2>
-                    <p class="product subtitle">Подари себе флорариум по размеру</p>
-                    <ul class="product__size-list">
-                        <li class="product__size">
-                            <label>
-                                <input type="radio" name="size" id="" class="product__chek">
-                                <div class="product__chek-fake">S</div>
-
-                            </label>
+        <section class="product">
+            <div class="container">
+                <h2 class="title">Готовые работы</h2>
+                <p class="product__subtitle">Подбери себе флорариум по размеру:</p>
+                <ul class="product__size-list">
+                    <li class="product__size">
+                        <label>
+                            <input type="radio" name="size" id="" class="product__check">
+                            <div class="product__check-fake">S</div>
+                        </label>
+                    </li>
+                    <li class="product__size">
+                        <label>
+                            <input type="radio" name="size" id="" class="product__check">
+                            <div class="product__check-fake">M</div>
+                        </label>
+                    </li>
+                    <li class="product__size">
+                        <label>
+                            <input type="radio" name="size" id="" class="product__check">
+                            <div class="product__check-fake">L</div>
+                        </label>
+                    </li>
+                    <li class="product__size">
+                        <label>
+                            <input type="radio" name="size" id="" class="product__check">
+                            <div class="product__check-fake">XL</div>
+                        </label>
+                    </li>
+                </ul>
+                <div class="product__slider">
+                    <div class="product__slider-ctrls">
+                        <button class="product__slider-ctrl product__slider-ctrl--prev">Назад</button>
+                        <button class="product__slider-ctrl product__slider-ctrl--next">Вперед</button>
+                    </div>
+                    <ul class="product__list">
+                        <li class="product__item card">
+                            <div class="card__img-wrap">
+                                <img src="img/finished_work/dunay.png .png" alt="флорариум Дунай" class="card__img">
+                            </div>
+                            <div class="card__desc">
+                                <h3 class="card__name">“Оазис”</h3>
+                                <p class="card__info">
+                                    Набор включает в себя: 3 разновидности суккулентов, тайскую архидею, грунт,
+                                    стеклянный
+                                    флорариум и элементы декора.
+                                </p>
+                                <div class="card__buy">
+                                    <div class="card__price">35$</div>
+                                    <button class="card__buy-btn btn">В корзину</button>
+                                </div>
+                            </div>
                         </li>
-                        <li class="product__size">
-                            <label>
-                                <input type="radio" name="size" id="" class="product__chek">
-                                <div class="product__chek-fake">M</div>
-
-                            </label>
+                        <li class="product__item card">
+                            <div class="card__img-wrap">
+                                <img src="img/finished_work/oazis.png" alt="флорариум оазис" class="card__img">
+                            </div>
+                            <div class="card__desc">
+                                <h3 class="card__name">“Оазис”</h3>
+                                <p class="card__info">
+                                    Набор включает в себя: 3 разновидности суккулентов, тайскую архидею, грунт,
+                                    стеклянный
+                                    флорариум и элементы декора.
+                                </p>
+                                <div class="card__buy">
+                                    <div class="card__price">35$</div>
+                                    <button class="card__buy-btn btn">В корзину</button>
+                                </div>
+                            </div>
                         </li>
-                        <li class="product__size">
-                            <label>
-                                <input type="radio" name="size" id="" class="product__chek">
-                                <div class="product__chek-fake">L</div>
-
-                            </label>
-                        </li>
-                        <li class="product__size">
-                            <label>
-                                <input type="radio" name="size" id="" class="product__chek">
-                                <div class="product__chek-fake">XL</div>
-
-                            </label>
+                        <li class="product__item card">
+                            <div class="card__img-wrap">
+                                <img src="img/finished_work/oazis.png" alt="флорариум оазис" class="card__img">
+                            </div>
+                            <div class="card__desc">
+                                <h3 class="card__name">“Оазис”</h3>
+                                <p class="card__info">
+                                    Набор включает в себя: 3 разновидности суккулентов, тайскую архидею, грунт,
+                                    стеклянный
+                                    флорариум и элементы декора.
+                                </p>
+                                <div class="card__buy">
+                                    <div class="card__price">35$</div>
+                                    <button class="card__buy-btn btn">В корзину</button>
+                                </div>
+                            </div>
                         </li>
                     </ul>
-                    <div class="product__slider">
-                        <div class="product__slider-ctrls">
-                            <button class="product__slider-ctrl product__slider-ctrl--prev">Назад</button>
-                            <button class="product__slider-ctrl product__slider-ctrl--next">Вперед</button>
-                        </div>
-                        <ul class="product__list">
-                            <li class="product__item card">
-                                <div class="card__item-wrap">
-                                    <img src="img/finished_work/oazis.png" alt="флорариум оазис" class="product__img">
-                                </div>
-                                <div class="card__decs">
-                                    <h3 class="card__name">Oазис</h3>
-                                    <p class="card__info">
-                                        Набор включает в себя: 3 разновидности суккулентов, тайскую архидею, грунт,
-                                        стеклянный
-                                        флорариум и элементы декора.
-                                    </p>
-                                    <div class="card__buy">
-                                        <div class="card__price">35$</div>
-                                        <button class="card__buy-btn btn">В корзину</button>
-
-                                    </div>
-                                </div>
-
-                            </li>
-                            <li class="product__item card">
-                                <div class="card__item-wrap">
-                                    <img src="img/finished_work/oazis.png" alt="флорариум оазис" class="product__img">
-                                </div>
-                                <div class="card__decs">
-                                    <h3 class="card__name">Oазис</h3>
-                                    <p class="card__info">
-                                        Набор включает в себя: 3 разновидности суккулентов, тайскую архидею, грунт,
-                                        стеклянный
-                                        флорариум и элементы декора.
-                                    </p>
-                                    <div class="card__buy">
-                                        <div class="card__price">35$</div>
-                                        <button class="card__buy-btn btn">В корзину</button>
-
-                                    </div>
-                                </div>
-
-                            </li>
-                            <li class="product__item card">
-                                <div class="card__item-wrap">
-                                    <img src="img/finished_work/oazis.png" alt="флорариум оазис" class="product__img">
-                                </div>
-                                <div class="card__decs">
-                                    <h3 class="card__name">Oазис</h3>
-                                    <p class="card__info">
-                                        Набор включает в себя: 3 разновидности суккулентов, тайскую архидею, грунт,
-                                        стеклянный
-                                        флорариум и элементы декора.
-                                    </p>
-                                    <div class="card__buy">
-                                        <div class="card__price">35$</div>
-                                        <button class="card__buy-btn btn">В корзину</button>
-
-                                    </div>
-                                </div>
-
-                            </li>
-
-
-                        </ul>
-                    </div>
-
                 </div>
-
-            </section>
-
+            </div>
+        </section>
+        <section class="about"> 
+            <div class="container about">
+                <h2 class="title about__title"> О нас говорят</h2>
+                <ul class="about__list>
+                    <li class="about__item feedback">
+                    <div class="feedback__info">
+                        <div class="feedback__title">
+                        <span class="feedback__name">Иван</span>
+                        <span class="feedback__prof"> директор "Office"</span>
+                        </div>
+                        <div class="feedback__text">
+                            Обратился в компанию “Floris master” для озеленения нашего офиса, теперь на рабочем месте царит гармония и уют.  
+                        </div>
+                    </div>
+                    <div class="feedback__avatar">
+                        <img src="img/rev__photo/ivan.png" alt="Men" class="feedback__pic">
+                     </ul>
+                    </div>
+                </li>
+            </div>
+            <ul class="about__list>
+                < li class="about__item feedback">
+                <div class="feedback__info">
+                    <div class="feedback__title">
+                    <span class="feedback__name">Иван</span>
+                    <span class="feedback__prof"> директор "Office"</span>
+                    </div>
+                    <div class="feedback__text">
+                        Обратился в компанию “Floris master” для озеленения нашего офиса, теперь на рабочем месте царит гармония и уют.  
+                    </div>
+                </div>
+                <div class="feedback__avatar">
+                    <img src="img/rev__photo/vladimir.png"
+                </li>
+                </div>
+                < li class="about__item feedback">
+                <div class="feedback__info">
+                    <div class="feedback__title">
+                    <span class="feedback__name">Иван</span>
+                    <span class="feedback__prof"> директор "Office"</span>
+                    </div>
+                    <div class="feedback__text">
+                        Обратился в компанию “Floris master” для озеленения нашего офиса, теперь на рабочем месте царит гармония и уют.  
+                    </div>
+                </div>
+                <div class="feedback__avatar">
+                    <img src="img/rev__photo/ivan.png"
+                </li>
+                <\ul>
 
         </section>
+        <footer class="footer">
+            <div class="container footer__container">
+                <div class="logo">
+                    <div class="logo__img-wrap">
+                        <img src="img/logo.png" alt="Логотип" class="logo__img">
+                    </div>
+                    <div class="logo__desc">
+                        <div class="logo__title">Florist master</div>
+                        <div class="logo__subtitle">Магазин флорариумов</div>
+                    </div>
+                </div>
+                <nav class="nav header__nav">
+                    <ul class="nav__list">
+                        <li class="nav__item">
+                            <a href="#!" class="nav__link">Главная</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#!" class="nav__link">Каталог</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#!" class="nav__link">Контакты</a>
+                        </li>
+                    </ul>
+                </nav>
+                <address class="contact">
+                    <a href="tel:+76543210000" class="contact__tel">+7 654 321 00 00</a>
+                </address>
+
+
+        </footer>
     </div>
 </body>
 
